--- a/node-todo-api/package.json
+++ b/node-todo-api/package.json
@@ -8,6 +8,9 @@
     "test": "export NODE_ENV=test || SET NODE_ENV=\"test\" && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
+  "engines": {
+    "node": "6.14.3"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
